--- a/src/pages/Landing/styles.css
+++ b/src/pages/Landing/styles.css
@@ -14,6 +14,49 @@
 .logo-container img {
   height: 10rem;
 }
+.logo-container h2 {
+  font-weight: 500;
+  font-size: 2.4rem;
+  line-height: 4.6rem;
+  margin-top: 0.8rem;
+}
 .hero-image {
   width: 100%
+}
+.buttons-container {
+  display: flex;
+  justify-content: center;
+  margin: 3.2rem 0;
+}
+.buttons-container a {
+  width: 30rem;
+  height: 10.4rem;
+  border-radius: 0.8rem;
+  margin-right: 1.6rem;
+  font: 700 2.0rem Archivo;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  color: var(--color-button-text);
+  transition: background-color 0.2s;
+}
+.buttons-container a:first-child {
+  margin-right: 1.6rem;
+}
+.buttons-container a img {
+  width: 4rem;
+}
+.buttons-container a.study {
+  background: var(--color-primary-lighter);
+}
+.buttons-container a.study:hover {
+  background: var(--color-primary-light);
+} 
+.buttons-container a.give-classes {
+  background: var(--color-secundary);
+}
+
+.buttons-container a.give-classes:hover {
+  background: var(--color-secundary-dark);
 }
