--- a/src/pages/Landing/styles.css
+++ b/src/pages/Landing/styles.css
@@ -60,3 +60,12 @@
 .buttons-container a.give-classes:hover {
   background: var(--color-secundary-dark);
 }
+.total-connections {
+  font-size: 1.6rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.total-connections img {
+  margin-left: 0.8rem;
+}
