--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -40,6 +40,7 @@ body {
 }
 body,input,button,textarea {
   font: 500 1.6rem Poppins;
+  color: var(--color-text-base);
 }
 .container {
   width: 90vh;
