--- a/src/pages/TeacherList/styles.css
+++ b/src/pages/TeacherList/styles.css
@@ -27,7 +27,8 @@
     position: absolute;
     bottom: -28px;
   }
-  #search-teachers .input-block + .input-block {
+  #search-teachers .input-block + .input-block,
+  #search-teachers .select-block + .select-block {
     margin-top: 0;
   }
   #page-teacher-list main{
